# VisualX-Engine

./: .gitignore  README.md
VX Engine/: 02 Bounce Ball.vx  02Bounce.lua  03Asset.lua  04 Spawner.vx  Designer.cpp  Engine.cpp  EntitiesHandler.h  Entity.cpp  Entity.h  Flappy Bird.vx  Game.cpp  Game.h  Loader.cpp  Parser.cpp  VXLua.cpp  VXLua.h  games.txt  imgui.ini  main.cpp
VXEngineFirstThenDeleted/: 01 Game.vx  01Game.lua  03 Asset.vx  Backend.h  Designer.h  Engine.h  EntitiesHandler.cpp  EntityComponentSystem.h  EntityHandler.cpp  EntityHandler.h  ExampleFunctions.lua  Loader.h  Ping Pong.vx  PingPong.lua  Space Invaders.vx  Tennis for Two.vx  VX Engine.vcxproj.filters.txt  VX.lua  aa.vx  test.lua
engine/: CMakeLists.txt  main.cpp
engine/include/application/: Designer.h  Engine.h  Game.h  Loader.h
engine/include/system/: EntitiesHandler.h  Entity.h  EntityComponentSystem.h  Parser.h
engine/include/utilities/: VXLua.h
engine/src/application/: Designer.cpp  Engine.cpp  Game.cpp  Loader.cpp
engine/src/system/: EntitiesHandler.cpp  Entity.cpp  EntityHandler.cpp  Parser.cpp
engine/src/utilities/: VXLua.cpp
testing/: bob.vx  some game.vx  test game 2.vx
